# bootcamp-Siddhanth

./: .gitignore
APIs/API_Client_Programming/ex-1-1/: README.md  fetch_repos.py  notes.html  pyproject.toml
APIs/API_Client_Programming/ex-1-10/: README.md  anilist_graphql.py  notes.html  notes.md  pyproject.toml
APIs/API_Client_Programming/ex-1-11/: README.md  hacker_news.py  notes.html  notes.md  pyproject.toml
APIs/API_Client_Programming/ex-1-12/: README.md  notes.html  (+3 more)
APIs/API_Client_Programming/ex-1-13/: README.md  github_contributions.py  notes.html  notes.md  pyproject.toml
APIs/API_Client_Programming/ex-1-3/: README.md  list_events.py  notes.html  notes.md  pyproject.toml
APIs/API_Client_Programming/ex-1-4/: README.md  notes.html  notes.md  pyproject.toml  weather_cli.py
APIs/API_Client_Programming/ex-1-5/: README.md  notes.html  notes.md  post_bluesky.py  pyproject.toml
APIs/API_Client_Programming/ex-1-6/: README.md  github_graphql.py  notes.html  notes.md  pyproject.toml
APIs/API_Client_Programming/ex-1-7/: README.md  notes.html  notes.md  pyproject.toml  spacex_graphql.py
APIs/API_Client_Programming/ex-1-9/: README.md  notes.html  notes.md  pyproject.toml  rick_and_morty.py
APIs/API_Endpoint_development/ex-2-1/: README.md  main.py  notes.html  notes.md  pyproject.toml
APIs/API_Endpoint_development/ex-2-1/templates/: index.html
APIs/API_Endpoint_development/ex-2-2/: README.md  main.py  notes.html  notes.md  pyproject.toml
APIs/Simple_API_development/ex-3-4/: README.md  notes.html  notes.md  pyproject.toml
APIs/Simple_API_development/ex-3-4/app/: main.py
APIs/Simple_API_development/ex-3-8/: README.md  notes.html  notes.md  pyproject.toml
APIs/Simple_API_development/ex-3-8/app/: main.py
APIs/Streamlit_applications/ex-4-2/: README.md  app.py  notes.html  notes.md  pyproject.toml
APIs/Streamlit_applications/ex-4-2/pages/: about.py  home.py
APIs/Streamlit_applications/ex-4-7/: README.md  app.py  notes.html  notes.md  pyproject.toml
APIs/Streamlit_applications/ex-4-8/: README.md  app.py  notes.html  notes.md  pyproject.toml
Iterators-and-Streams/siddhanth-wf-basic/: notes.html  notes.md  pyproject.toml
Iterators-and-Streams/siddhanth-wf-basic/siddhanth_wf_basic/: commands.py  processing_functions.py
Iterators-and-Streams/siddhanth-wf-dynamic/: README.md  notes.html  notes.md  pyproject.toml
Iterators-and-Streams/siddhanth-wf-dynamic-streaming/: notes.html  notes.md  pyproject.toml
Iterators-and-Streams/siddhanth-wf-dynamic-streaming/siddhanth_wf_dynamic_streaming/: commands.py  stream_adapter_functions.py  stream_functions.py
Iterators-and-Streams/siddhanth-wf-dynamic-streaming/tests/: test_stream_functions.py
Iterators-and-Streams/siddhanth-wf-dynamic/config/: sample_pipeline.yaml
Iterators-and-Streams/siddhanth-wf-dynamic/siddhanth_wf_dynamic/: commands.py  yaml_processor.py
Iterators-and-Streams/siddhanth-wf-iterators/: .gitignore  README.md  main.py  notes_advanced_pipeline.html  notes_advanced_pipeline.md  notes_basic_iterator.html  notes_basic_iterator.md  notes_chaining.html  notes_chaining.md  notes_efficient_processing.html  notes_efficient_processing.md  notes_error_handling.html  notes_error_handling.md  notes_file_generator.html  notes_file_generator.md  notes_file_iterator.html  notes_file_iterator.md  notes_filter_generator.html  notes_filter_generator.md  notes_pipeline.html  notes_pipeline.md  notes_stream_processing.html  notes_stream_processing.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
Persistence/: requirements.txt
Persistence/Basic_python_persistence/ex-1-10/: notes.html  notes.md  pyproject.toml
Persistence/Basic_python_persistence/ex-1-10/persistence_demo/: document.py  version_handler.py
Persistence/Basic_python_persistence/ex-1-6/: notes.html  notes.md  pyproject.toml
Persistence/Basic_python_persistence/ex-1-6/persistence_demo/: car.py  deserialize_yaml.py
Persistence/SQLAlchemy_Pydantic/ex-4-3/: README.md  notes.html  notes.md  pyproject.toml  test.db
Persistence/SQLAlchemy_Pydantic/ex-4-3/ex_4_3/: crud.py  main.py
Persistence/SQLAlchemy_Pydantic/ex-4-3/tests/: test_crud.py
Persistence/SQLAlchemy_Pydantic/ex-6-4/: README.md  notes.html  notes.md  pyproject.toml
Persistence/SQLAlchemy_Pydantic/ex-6-4/ex_6_4/: crud.py  main.py  models.py
Persistence/SQLite/: notes.html  notes.md
Python-Basics/EXERCISE_1/ex-1-3/: notes.html  notes.md  pyproject.toml
Python-Basics/EXERCISE_1/ex-1-3/ex_1_3/: main.py
Python-Basics/EXERCISE_1/ex-1-4/: notes.html  notes.md  pyproject.toml
Python-Basics/EXERCISE_1/ex-1-4/ex_1_4/: helloworld.py  many_hellos.py
Python-Basics/EXERCISE_1/ex-1-5a/: notes.html  notes.md  pyproject.toml
Python-Basics/EXERCISE_1/ex-1-5a/ex_1_5a/: hello.py
Python-Basics/EXERCISE_1/ex-1-5d/: .gitignore  README.md  notes.html  notes.md  pyproject.toml
Python-Basics/EXERCISE_1/ex-1-5d/hello/: __init__.py  config_loader.py  hello.py
Python-Basics/EXERCISE_1/ex-1-5e/: notes.html  notes.md  pyproject.toml
Python-Basics/EXERCISE_1/ex-1-5e/many-hellos/: cli.py
Python-Basics/EXERCISE_1/ex-1-6/: notes.html  notes.md  pyproject.toml
Python-Basics/EXERCISE_1/ex-1-6/hello/: config_loader.py  hello.py
file-manager/: filetagr-design-document.md
problem1/persistent_queue_system/: README.md  notes.html  notes.md  pyproject.toml
problem1/persistent_queue_system/persistent_queue_system/: admin.py  consumer.py  db.py  manager.py  ops.py  producer.py
problem1/persistent_queue_system/persistent_queue_system/queue/: __init__.py  base.py  sqlite_queue.py
problem1/persistent_queue_system/supervisor/: supervisord.conf
problem1/persistent_queue_system/tests/: test_consumer.py  test_producer.py  test_queue.py
problem1_new/persistent_queue_system/: NOTES.md  README.md  pyproject.toml  supervisord.conf
problem1_new/persistent_queue_system/persistent_queue_system/: __init__.py  admin.py  consumer.py  db.py  manager.py  ops.py  producer.py
problem1_new/persistent_queue_system/persistent_queue_system/queue/: __init__.py  base.py  sqlite_queue.py
(+677 files in other folders)
