[tool.poetry]
name = "siddhanth-wf-dynamic-streaming"
version = "0.1.0"
description = "Streaming-based text processing package"
authors = ["siddhanthagarwal984 <siddhanthagarwal984@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.6.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
process-stream = "siddhanth_wf_dynamic_streaming.commands:app"