[tool.poetry]
name = "persistent-queue-system"
version = "0.1.0"
description = ""
authors = ["siddhanthagarwal984 <siddhanthagarwal984@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.0.0"
fastapi = "^0.100.0"
pydantic = "^2.0"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
