[tool.poetry]
name = "persistent-queue-system"
version = "0.1.0"
description = "A robust, scalable job queue management system with SQLite backend"
authors = ["Siddhanth"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.0.0"
pandas = "^2.0.1"
supervisor = "^4.2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
producer = "persistent_queue_system.producer:main"
consumer = "persistent_queue_system.consumer:main"
manager = "persistent_queue_system.manager:main"
admin = "persistent_queue_system.admin:main"
ops = "persistent_queue_system.ops:main"