[tool.poetry]
name = "ex-1-10"
version = "0.1.0"
description = "Fetch anime data using AniList's GraphQL API."
authors = ["siddhanthagarwal984 <siddhanthagarwal984@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gql = "^3.5.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
