[tool.poetry]
name = "ex-4-8"
version = "0.1.0"
description = ""
authors = ["siddhanthagarwal984 <siddhanthagarwal984@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.1"
plotly = "^6.0.0"
pandas = "^2.2.3"
numpy = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
