[project]
name = "ex-1-4"
version = "0.1.0"
description = ""
authors = [
    {name = "siddhanthagarwal984",email = "siddhanthagarwal984@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer (>=0.15.1,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
