[project]
name = "ex-1-5a"
version = "0.1.0"
description = ""
authors = [
    {name = "siddhanthagarwal984",email = "siddhanthagarwal984@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
