[tool.poetry]
name = "many-hellos"
version = "0.1.0"
description = "A CLI to say hello multiple times"
authors = ["Your Name <you@example.com>"]
dependencies = { python = "^3.8", typer = "^0.9.0", hello-config = "^0.1.0" }


[tool.poetry.scripts]
many-hellos = "many_hellos.cli:app"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
